# ai-discordbot

./: .dockerignore  .gitignore  AI DsicordBot.xmind  Dockerfile  README.md  document_store.db  pyproject.toml  requirements.txt
debug_history/: conversation.py
src/: bot.py  test.py  test2.py
src/cogs/: aichat_cog.py  azureai_cog.py  azureai_conversational_cog.py  genai_cog.py  genai_conversational_cog.py
test/: aichat_cog.py  azure_chatgenerator.py  azure_chatpipline.py  azureai_gnerator.py  bot.py  historychat_cog.py  mongodb.py  pipline.py
test/cogs/: azureai_conversational_cog.py  conversational_genai.py  conversational_genai_cog.py  genai_conversational_cog.py  historychat_cog.py
