[build-system]
requires = [""]
build-backend = ""

[project]
name = "ai-chat-bot"
dynamic = ["version"]
description = "make a memories ai chat bot in discord"
readme = "README.md"
license = ""
requires-python = ">=3.8,<3.13"
authors = [{ name = "tim", email = "timray0214@gmail.com" }]
keywords = [
  "discord",
  "genai",
  "ai",
  "chatbot",
  "memories",
]
classifiers = [
  "Development Status :: ",
  "Intended Audience :: Science/Research",
  "License :: ",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: ",
]
dependencies = [
  "discord.py==2.4.0",
  "python-dotenv==1.0.1",
  "google-generativeai==0.8.3",
  "openai==1.57.0",
  "haystack-ai==2.8.0",
  "google-ai-haystack==3.0.2",
  "datasets==3.1.0",
  "mongodb-atlas-haystack",
]
[tool.hatch.envs.test]
extra-dependencies = [
  
]
